--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -6,13 +6,14 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 logo">
         <img src="assets/images/footer-logo.png" alt="">
-        <span class="copyright">&copy; 2014 Rented</span>
+        <span class="copyright">&copy; 2015 Rented, Inc.</span>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 link">
-        <a href="#">Terms and Conditions</a> | 
-        <a href="#">Privacy policy </a> | 
+        <a href="#">Terms and Conditions</a> |
+        <a href="#">Privacy policy </a> |
         <a href="#">Contact us</a>
       </div>
     </div>
+
   </div>
 </footer>
