--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1203,172 +1203,17 @@ h2.section-title:nth-child(n+2) {
   color: #cccccc;
 }
 
-.set-size {
-  font-size: 14em;
-}
-.pie-wrapper {
-  height: 1em;
-  width: 1em;
-  display: inline-block;
-  position: relative;
-}
-.pie-wrapper .pie {
-  height: 100%;
-  width: 100%;
-  clip: rect(0,1em,1em,0.5em);
-  left: 0;
-  position: absolute;
-  top: 0;
-}
-.pie-wrapper .pie .half-circle {
-  height: 100%;
-  width: 100%;
-  border: 0.05em solid #56bfc3;
-  border-radius: 50%;
-  clip: rect(0,0.5em,1em,0);
-  left: 0;
-  position: absolute;
-  top: 0;
-}
-.pie-wrapper .label {
-  background: #ffffff ;
-  border-radius: 50%;
-  bottom: 0.4em;
-  cursor: default;
-  display: block;
-  font-size: 0.25em;
-  left: 0.4em;
-  position: absolute;
-  right: 0.4em;
-  top: 0.4em;
-  padding: 0;
-}
-.pie-wrapper .label img {
-  width: 3em;
-  height: 3em;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -1.5em 0 0 -1.5em;
-}
-.pie-wrapper .shadow {
-  height: 100%;
-  width: 100%;
-  border: 0.05em solid #e8e8e8;
-  border-radius: 50%;
-}
-.pie-wrapper.style-2 .label {
-  background: none;
-  color: #7f8c8d;
-}
-.pie-wrapper.style-2 .label .smaller {
-  color: #bdc3c7;
-}
-.pie-wrapper.progress-30 .pie .half-circle {
-  border-color: #56bfc3;
-}
-.pie-wrapper.progress-30 .pie .left-side {
-  -webkit-transform: rotate(108deg);
-  -moz-transform: rotate(108deg);
-  -ms-transform: rotate(108deg);
-  -o-transform: rotate(108deg);
-  transform: rotate(108deg);
-}
-.pie-wrapper.progress-60 .pie {
-  clip: rect(auto,auto,auto,auto);
-}
-.pie-wrapper.progress-60 .pie .right-side {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-.pie-wrapper.progress-60 .pie .half-circle {
-  border-color: #9b59b6;
-}
-.pie-wrapper.progress-60 .pie .left-side {
-  -webkit-transform: rotate(216deg);
-  -moz-transform: rotate(216deg);
-  -ms-transform: rotate(216deg);
-  -o-transform: rotate(216deg);
-  transform: rotate(216deg);
-}
-.pie-wrapper.progress-90 .pie {
-  clip: rect(auto,auto,auto,auto);
-}
-.pie-wrapper.progress-90 .pie .right-side {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-.pie-wrapper.progress-90 .pie .half-circle {
-  border-color: #e67e22;
-}
-.pie-wrapper.progress-90 .pie .left-side {
-  -webkit-transform: rotate(324deg);
-  -moz-transform: rotate(324deg);
-  -ms-transform: rotate(324deg);
-  -o-transform: rotate(324deg);
-  transform: rotate(324deg);
-}
-.pie-wrapper.progress-45 .pie .half-circle {
-  border-color: #1abc9c;
-}
-.pie-wrapper.progress-45 .pie .left-side {
-  -webkit-transform: rotate(162deg);
-  -moz-transform: rotate(162deg);
-  -ms-transform: rotate(162deg);
-  -o-transform: rotate(162deg);
-  transform: rotate(162deg);
-}
-.pie-wrapper.progress-75 .pie {
-  clip: rect(auto,auto,auto,auto);
-}
-.pie-wrapper.progress-75 .pie .right-side {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-.pie-wrapper.progress-75 .pie .half-circle {
-  border-color: #8e44ad;
-}
-.pie-wrapper.progress-75 .pie .left-side {
-  -webkit-transform: rotate(270deg);
-  -moz-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  -o-transform: rotate(270deg);
-  transform: rotate(270deg);
-}
-.pie-wrapper.progress-95 .pie {
-  clip: rect(auto,auto,auto,auto);
-}
-.pie-wrapper.progress-95 .pie .right-side {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-.pie-wrapper.progress-95 .pie .half-circle {
-  border-color: #e74c3c;
-}
-.pie-wrapper.progress-95 .pie .left-side {
-  -webkit-transform: rotate(342deg);
-  -moz-transform: rotate(342deg);
-  -ms-transform: rotate(342deg);
-  -o-transform: rotate(342deg);
-  transform: rotate(342deg);
-}
-.draw-progress(@progress .pie .right-side,
-  $color) when (@progress <= 50) .pie .right-side {
-  display: none;
+.profile-sidebar .profile {
+  text-align: center;
 }
 
+.profile-sidebar .profile img {
+  width: 11em;
+  height: 11em;
+  border: 5px solid #56bfc3;
+}
+
+/* My Profile */
 .my-profile .profile h2{
   color: #000000;
   text-align: center;
