--- a/client/components/layout/navbar/sub-navbar.html
+++ b/client/components/layout/navbar/sub-navbar.html
@@ -1,11 +1,13 @@
-<nav class="dashboard-submenu">
-  <label for="toggle-mobile-menu">&#9776; Menu</label>
-  <input id="toggle-mobile-menu" type="checkbox"/>
-  <ul>
-    <div class="container">
-      <a ui-sref="{{tab.sref}}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in dashboard.tabs">
-        <li>{{tab.title}}</li>
-      </a>
-    </div>
-  </ul>
-</nav>
+<div ng-controller="SubNavbarCtrl as subnav">
+  <nav class="dashboard-submenu">
+    <label for="toggle-mobile-menu">&#9776; Menu</label>
+    <input id="toggle-mobile-menu" type="checkbox"/>
+    <ul>
+      <div class="container">
+        <a ui-sref="{{tab.sref}}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in subnav.tabs">
+          <li>{{tab.title}}</li>
+        </a>
+      </div>
+    </ul>
+  </nav>
+</div>
