--- a/client/app/app.css
+++ b/client/app/app.css
@@ -878,7 +878,7 @@ Dashboard styles
   color: #666666;
 }
 
-div.dashboard-wrapper {
+div.main-wrapper {
   padding-top: 50px;
   padding-bottom: 50px;
   background: #e8e8e8;
