--- a/client/app/app.css
+++ b/client/app/app.css
@@ -761,6 +761,7 @@ footer .logo {
   body .my-listings .list-item {
     width: 100%;
     text-align: center;
+    min-height: 280px;
   } 
 
   body .my-listings .list-item .edit span{
