Update DB schema (v9), new model file for address history, updated CSS for My Profile, updated spgenConfig

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -367,6 +367,7 @@ Medium Rented button
 .btn-rented-medium {
   font-size: 14px;
   border-radius: 25px;
+  border: none;
   font-weight: 600;
   width: 140px;
   height: 40px;
@@ -394,12 +395,12 @@ Medium Rented button - secondary color
 /* ==========================================================================
 Medium Rented button - hover and active
 ========================================================================== */
-.btn-rented-medium:hover {
+.btn-rented-medium.primary:hover {
   background-color: #e4e4e4;
   color: #000000;
 }
 
-.btn-rented-medium:active {
+.btn-rented-medium.primary:active {
   background-color: #000000;
   color: #FFFFFF;
 }
@@ -762,7 +763,7 @@ footer .logo {
     width: 100%;
     text-align: center;
     min-height: 280px;
-  } 
+  }
 
   body .my-listings .list-item .edit span{
     display: block;
