--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1434,6 +1434,15 @@ h2.section-title:nth-child(n+2) {
   transform: rotateY(0deg);
 }
 
+.front .picture {
+  display: inline-flex;
+  width: calc(100% + 40px) !important;
+  margin: -20px;
+  margin-bottom: 0px;
+  min-height: 140px;
+  border-radius: 3px 3px 0px 0px !important;
+}
+
 .back {
   width: 100%;
   border-radius: 5px;
@@ -1811,6 +1820,64 @@ h2.no-roommate small{
 
 
 a.view-all {
-top: -10px;
-position: relative;
+  top: -10px;
+  position: relative;
+}
+
+/* Rooms */
+
+/* Available Rooms */
+.rooms .room {
+  padding-top: 15px;
+}
+
+.rooms .room .picture {
+  border-radius: 3px;
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+}
+
+.rooms .room .picture img {
+  width: 100%;
+}
+
+.rooms .room .info {
+  font-weight: bold;
+  display: inline-block;
+  width: 100%;
+  margin-top: 5px;
+}
+
+.rooms .room .info .value {
+  color: #000000;
+  font-weight: bold;
+  float: left;
+  border-bottom: 3px solid #f7953d;
+}
+
+.rooms .room .info .distance {
+  color: #000000;
+  float: right;
+}
+
+.rooms .room ul.specs {
+  display: block;
+  list-style:none;
+}
+
+.rooms .room ul.specs li {
+  margin-top: 5px;
+}
+
+.rooms .slider .slick-prev, .rooms .slider .slick-next, .rooms .slider .slick-dots {
+  bottom: -35px;
+}
+
+.rooms .slider .slick-prev {
+  left: 15px;
+}
+
+.rooms .slick-dots {
+  left: 45px;
 }
