--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 logo">
-        <img src="assets/images/footer-logo.png" alt="">
+        <img src="assets/images/footer-logo.svg" alt="">
         <span class="copyright">&copy; 2015 Rented, Inc.</span>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 link">
