--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="left-content">
       <a href="/">
-        <img src="../../../assets/images/rented-name-logo.png" alt="rented" class="logo">
+        <img src="../../../assets/images/webname.svg" alt="campusly" >
       </a>
-      <p class="txt" ng-hide="isLoggedIn()">secure off-campus housing community</p>
+      <p class="brand-text" ng-hide="isLoggedIn()">secure off-campus community</p>
     </div>
 
     <div class="right-content" ng-show="isLoggedIn()">
